Make the submit button appear correctly on iOS safari

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -84,6 +84,10 @@ header {
     justify-content: space-between;
 }
 
+header p {
+    text-align: right
+}
+
 header p a {
     color: #333;
     position: relative;
